--- a/src/app/app.css
+++ b/src/app/app.css
@@ -3,13 +3,24 @@ h1 {
   font-size: 2.5rem;
 }
 
-input {
-  margin-top: 1%;
-  margin-bottom: 2%;
-  margin-left: 50%;
-  transform: translateX(-50%);
-  padding: 5px 20px;
-  border-radius: 15px;
+.search-bar {
+  color: #fff;
+  border: 0;
+  width: 35%;
+  height: 12.5%;
+  padding: 1.5%;
+  background-color: #95A5A6;
+  border-radius: 20px;
+  transform: scale(0.5);
+  font-size: 30px;
+  box-sizing: border-box;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.search-bar:focus {
+  outline: none;
 }
 
 ul {
@@ -26,13 +37,22 @@ ul {
 
 table {
   margin: 0 auto;
-  border-collapse: collapse;
-  border: 2px solid
+  width: 75%;
 }
 
-th, td {
-  border: 1px solid rgb(0, 0, 0);
-  padding: 8px 10px;
+th {
+  background-color: #95A5A6;
+  color: white;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 20px 30px;
+  text-align: center;
+  border-radius: 3px;
+}
+
+td {
+  padding: 20px 20px;
+  border-radius: 3px;
   text-align: center;
 }
 
