Design: Changement du titre avec un logo et changement du background

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<h1>One Piece DLE 2.0</h1>
+<img src="/assets/images/title.png" alt="Title OnePIeceDle2.0" class="img-title">
 
 <div class="recherche-global">
   <input class="search-bar" type="text" [formControl]="searchInput" placeholder="Cherche un personnage...">
