--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,6 +1,8 @@
-h1 {
-  text-align: center;
-  font-size: 2.5rem;
+.img-title {
+  display: flex;
+  margin: auto;
+  width: 25%;
+  margin-top: 1%;
 }
 
 ul {
@@ -34,6 +36,7 @@ td {
   padding: 20px 20px;
   border-radius: 3px;
   text-align: center;
+  background-color: white;
 }
 
 .correct {
@@ -67,6 +70,8 @@ td {
   position: relative;
   width: 22.5%;
   margin: 20px auto;
+  margin-top: 1.5%;
+  margin-bottom: 2%;
 }
 
 /* Barre -> remplit le parent */
