--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 
   /* Part de la racine du site*/
-  background-image: url('/assets/images/gotonewworld.jpeg');
+  background-image: url('/assets/images/background2.jpg');
   background-size: cover;
   background-attachment: fixed;
 }
