--- a/src/app/app.css
+++ b/src/app/app.css
@@ -35,10 +35,10 @@ th {
 }
 
 td {
-  padding: 20px 20px;
   border-radius: 3px;
   text-align: center;
-  background-color: white;
+  padding: 0;
+  width: 75px;
 }
 
 .correct {
@@ -108,6 +108,9 @@ td {
 }
 
 .perso-item {
+  display: flex;
+  gap: 5%;
+  align-items: center;
   padding: 10px 15px;
   border-bottom: 1px solid #eee;
   cursor: pointer;
@@ -115,4 +118,17 @@ td {
 
 .perso-item:hover {
   background-color: #f0f0f0;
+}
+
+.avatar {
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+  display: block;
+}
+
+.avatar-search-bar {
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
 }
