--- a/src/app/app.css
+++ b/src/app/app.css
@@ -22,6 +22,7 @@ ul {
 table {
   margin: 0 auto;
   width: 75%;
+  border-collapse: separate;
 }
 
 th {
@@ -131,4 +132,10 @@ td {
   width: 75px;
   height: 75px;
   object-fit: cover;
+}
+
+.loading-bar {
+  transform: scale(1.25);
+  margin-top: 5%;
+  gap: 0.25%;
 }
