--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,13 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 
   /* Part de la racine du site*/
   background-image: url('./assets/images/background.png');
+
   background-size: cover;
+  background-position: center center;
   background-attachment: fixed;
+  background-repeat: no-repeat;
 }
